<resources>
    <string name="app_name">TCPLand</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="hello_world">Hello</string>
    <string name="Password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="or_using">or using</string>
    <string name="don_t_have_an_account">dont have an account</string>
    <string name="sign_up">signup</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="real_estate">Bất động sản</string>
    <string name="trang_ch">Trang chủ</string>
    <string name="wallet">Ví</string>
    <string name="refactor">Tài khoản</string>
    <string name="so_du_tai_khoan">So du tai khoan</string>
    <string name="user">User</string>
    <string name="ma_xac_nhan">Nhập mã xác nhận</string>
    <string name="title_activity_navigator">Navigator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="t_i_s_n">Tài sản</string>
    <string name="th_ng_tin_d_n">Thông tin dự án</string>
    <string name="c_p_b_c">Cấp bậc</string>
    <string name="hoa_h_ng">Hoa hồng</string>
    <string name="blue">blue</string>
    <string name="red">red</string>
    <string name="green">green</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="action_sign_in">Đăng nhập hoặc đăng kí</string>
    <string name="action_sign_in_short">Đăng nhập</string>
    <string name="welcome">"Xin chào"</string>
    <string name="invalid_username">Tên không hợp lệ</string>
    <string name="invalid_password">Mật khẩu phải trên 5 kí tự</string>
    <string name="login_failed">"Đăng nhập thất bại"</string>
    <string name="null_form">"Không hợp lệ"</string>
    <string name="nonValidPassRep">Mật khẩu không trùng khớp</string>
    <string name="SucceedSignUp">Đăng kí thành công</string>
    <string name="thong_tin_lien_he">
        GtechLand
        \nĐịa chỉ trụ sở: Số 1 Đặng Văn Sâm, P.9, Q.Phú Nhuận, TP.HCM
        \nHotline: 028 378 27 888</string>
    <string name="soluong">Số lượng</string>
    <string name="mota">Mô tả</string>
    <string name="thongtinnap">NGÂN HÀNG: NGÂN HÀNG THƯƠNG MẠI CỔ PHẦN Á CHÂU (ACB) \nCHỦ TÀI KHOẢN: CÔNG TY CỔ PHẦN CÔNG NGHỆ TOÀN CẦU LAND \nSỐ TÀI KHOẢN: 87995687 \nNỘI DUNG: (SỐ ĐIỆN THOẠI) - (ID NGƯỜI DÙNG)</string>
    <string name="UserInfo">userinfo</string>

</resources>