<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_page"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_my_real_estate"
            android:title="@string/th_ng_tin_d_n" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_wallet"
            android:title="@string/t_i_s_n" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_level"
            android:icon="@drawable/ic_home_page"
            android:title="@string/c_p_b_c" />
        <item
            android:id="@+id/nav_payroll"
            android:icon="@drawable/ic_my_real_estate"
            android:title="@string/th_ng_tin_d_n" />
        <item
            android:id="@+id/nav_commission"
            android:icon="@drawable/ic_android_black_24dp"
            android:title="@string/hoa_h_ng" />
    </group>
</menu>