<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        />

    <ImageView
        android:id="@+id/logoTCP"
        android:layout_width="wrap_content"
        android:layout_height="165dp"
        android:layout_gravity="center"
        android:layout_marginTop="63dp"
        android:src="@drawable/logo_new"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <FrameLayout
        android:layout_width="361.25dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/sign_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoTCP">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <FrameLayout
                android:id="@+id/frame_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/rectangle_2"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="45dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textStyle="normal"
                    android:typeface="sans" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="3dp"
                    android:contentDescription="@string/hello_world"
                    android:src="@drawable/ic_user" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/frame_user_name"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/rectangle_2"
                    android:hint="@string/Password"
                    android:inputType="textEmailAddress"

                    android:paddingStart="45dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textStyle="normal"
                    android:typeface="sans" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="3dp"
                    android:contentDescription="@string/hello_world"
                    android:src="@drawable/ic_lock" />
            </FrameLayout>

            <CheckBox
                android:id="@+id/remember_me_chk_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/frame_password"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="16dp"
                android:text="@string/remember_me"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/remember_me_chk_box"
                android:layout_centerHorizontal="true"
                android:background="@android:color/transparent"
                android:src="@drawable/btn_login_bg"
                android:text="@string/login"
                android:textColor="@color/black" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/button_google_login"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_tv1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="9dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_login" />

            <TextView
                android:id="@+id/login_tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button_login"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/or_using"
                android:textColor="@color/lower_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/forgot_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button_google_login"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:text="@string/forgot_password"
                android:textColor="@color/lower_gray"
                android:textSize="15sp"
                android:typeface="serif" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgot_pass"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/login_tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/lower_gray"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/sign_up_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toRightOf="@+id/login_tv2"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </RelativeLayout>

        </RelativeLayout>


    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>