<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:background="@color/trendig_green">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity=""
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rectangle_white"
            android:padding="10dp"
            android:textSize="14dp"
            android:layout_margin="6dp"

            android:textColor="@color/white"
            android:textStyle="normal"

            android:text="@string/thongtinnap">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/soluong">
        </TextView>
        <EditText
            android:id="@+id/sotiennap"
            android:inputType="number"
            android:background="@drawable/rectangle"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/mota">
        </TextView>
        <EditText
            android:id="@+id/motaNap"
            android:background="@drawable/rectangle"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <FrameLayout
                android:padding="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/napBtn"
                    android:layout_gravity="start"
                    android:backgroundTint="@color/button"
                    android:background="@drawable/button_bg"
                    android:text="Nạp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textStyle="bold">
                </Button>
            </FrameLayout>
            <FrameLayout
                android:padding="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/rutBtn"
                    android:backgroundTint="@color/button"
                    android:layout_gravity="center"
                    android:text="Rút"
                    android:background="@drawable/button_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textStyle="bold">
                </Button>
            </FrameLayout>

        </LinearLayout>
        <ProgressBar
        android:id="@+id/loadingNap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/white"
        android:layout_marginBottom="64dp"
        android:visibility="visible" />
    </LinearLayout>

</LinearLayout>